<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:onClick="weeklyAction"
        android:text="@string/weekly"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Backward"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:onClick="PreviousMonthAction"
            android:background="@null"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/feb_2023"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:onClick="NextMonthAction"
            android:background="@null"
            android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thur"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/button_1id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="devAction"
        android:textColor="@color/black"
        android:text="@string/giortazoun_simera_oi"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_image"
            android:layout_width="match_parent"
            android:layout_height="275dp" />

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        app:menu="@menu/bottom_nav"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
        android:id="@+id/bottonnav"
        android:layout_weight="1"
        >
    </com.google.android.material.bottomnavigation.BottomNavigationView>




</LinearLayout>
